Fixed fetching + news update

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1124393984891043921" target="_blank">
+        <div class="biggus top">
+            <h3>TRL applications are open!</h3>
+            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
+        </div>
+        </a>
         <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
             <div class="biggus top">
                 <h3>Server overview is now available.</h3>
@@ -82,12 +88,12 @@
             <p>A copy of Husky/Nacnudd's map-generating program for learning map reading.</p>
         </div>
         </a>
-        <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
+        <!-- <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
         <div class="biggus"> 
             <h3>Seasonal section is out now!</h3>
             <p>Have a better seasonal char experience while playing with others.</p>
         </div>
-        </a>
+        </a> -->
         <!-- <div class="biggus">
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
@@ -131,6 +137,12 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1124393984891043921" target="_blank">
+        <div class="biggus top">
+            <h3>TRL applications are open!</h3>
+            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
+        </div>
+        </a>
         <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
             <div class="biggus top">
                 <h3>Server overview is now available.</h3>
@@ -167,12 +179,12 @@
             <p>A copy of Husky/Nacnudd's map-generating program for learning map reading.</p>
         </div>
         </a>
-        <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
+        <!-- <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
         <div class="biggus"> 
             <h3>Seasonal section is out now!</h3>
             <p>Have a better seasonal char experience while playing with others.</p>
         </div>
-        </a>
+        </a> -->
         <!-- <div class="biggus">
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
