--- a/public/index.html
+++ b/public/index.html
@@ -46,12 +46,12 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1114754748768329780" target="_blank">
-            <div class="biggus top">
-                <h3>Security applications are now closed</h3>
-                <p>If you were chosen you will be contacted within 2 weeks.</p>
-            </div>
-            </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1124393984891043921" target="_blank">
+        <div class="biggus top">
+            <h3>TRL applications are open!</h3>
+            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
+        </div>
+        </a>
         <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
             <div class="biggus top">
                 <h3>Server overview is now available.</h3>
@@ -137,12 +137,12 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1114754748768329780" target="_blank">
-            <div class="biggus top">
-                <h3>Security applications are now closed</h3>
-                <p>If you were chosen you will be contacted within 2 weeks.</p>
-            </div>
-            </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1124393984891043921" target="_blank">
+        <div class="biggus top">
+            <h3>TRL applications are open!</h3>
+            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
+        </div>
+        </a>
         <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
             <div class="biggus top">
                 <h3>Server overview is now available.</h3>
