--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1124393984891043921" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
         <div class="biggus top">
-            <h3>TRL applications are open!</h3>
-            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
+            <h3>Exalt Leader applications are open!</h3>
+            <p>No verification codes are required, good luck to all applicants.</p>
         </div>
         </a>
         <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
@@ -76,10 +76,10 @@
                 <p>Accursed has made a return for the shatters events, more details can be found by clicking here.</p>
             </div>
         </a>    
-        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1094331963403411476" target="_blank">
+        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
         <div class="biggus top">
             <h3>Exalt Leader applications are open!</h3>
-            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
+            <p>No verification codes are required, good luck to all applicants.</p>
         </div>
         </a> -->
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
@@ -137,13 +137,13 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1124393984891043921" target="_blank">
-        <div class="biggus top">
-            <h3>TRL applications are open!</h3>
-            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
-        </div>
-        </a>
-        <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
+            <div class="biggus top">
+                <h3>Exalt Leader applications are open!</h3>
+                <p>No verification codes are required, good luck to all applicants.</p>
+            </div>
+            </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
             <div class="biggus top">
                 <h3>Server overview is now available.</h3>
                 <p>It has never been easier to look up any information on the discord server.</p>
@@ -167,10 +167,10 @@
                 <p>Accursed has made a return for the shatters events, more details can be found by clicking here.</p>
             </div>
         </a>    
-        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1094331963403411476" target="_blank">
+        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
         <div class="biggus top">
             <h3>Exalt Leader applications are open!</h3>
-            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
+            <p>No verification codes are required, good luck to all applicants.</p>
         </div>
         </a> -->
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
