--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,8 @@
         <h1 class="head-title" id="bigNews">News</h1>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
         <div class="biggus top">
-            <h3>Exalt Leader applications are open!</h3>
-            <p>No verification codes are required, good luck to all applicants.</p>
+            <h3>Exalt Leader applications are now closed.</h3>
+                <p>Good luck to all applicants.</p>
         </div>
         </a>
         <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
@@ -139,8 +139,8 @@
         <h1 class="head-title" id="bigNews">News</h1>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
             <div class="biggus top">
-                <h3>Exalt Leader applications are open!</h3>
-                <p>No verification codes are required, good luck to all applicants.</p>
+                <h3>Exalt Leader applications are now closed.</h3>
+                <p>Good luck to all applicants.</p>
             </div>
             </a>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
