--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
+        <a href="https://media.discordapp.net/attachments/460732290117533696/1135847116103745577/Calendar.png?width=1202&height=676" target="_blank">
         <div class="biggus top">
-            <h3>Exalt Leader applications are now closed.</h3>
-                <p>Good luck to all applicants.</p>
+            <h3>The calander for the first week of MotMG</h3>
+                <p>Click here to view the calander for the first week of MotMG.</p>
         </div>
         </a>
         <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
@@ -137,10 +137,10 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
-            <div class="biggus top">
-                <h3>Exalt Leader applications are now closed.</h3>
-                <p>Good luck to all applicants.</p>
+        <a href="https://media.discordapp.net/attachments/460732290117533696/1135847116103745577/Calendar.png?width=1202&height=676" target="_blank">
+        <div class="biggus top">
+            <h3>The calander for the first week of MotMG</h3>
+                <p>Click here to view the calander for the first week of MotMG.</p>
             </div>
             </a>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1129611835428061356" target="_blank">
